@@ -32,7 +32,6 @@ dependencies = [
   "google_auth_oauthlib",
   "parsedatetime",
   "argcomplete",
-  "google-api-python-client-stubs",
 ]
 
 [project.urls]
