@@ -1,3 +1,5 @@
+# Fork of Typeshed's stubs to work around explicit export issue
+# https://github.com/py-vobject/vobject/issues/53.
 from .base import Component, readComponents as readComponents
 
 def iCalendar() -> Component: ...
