@@ -1,6 +1,7 @@
 v4.4.0
   * Fix lots of bugs by switching from deprecated oauth2client to
     google_auth_oauthlib
+  * Friendlier help output when `import` command is missing vobject extra
   * Handle encoding/decoding errors more gracefully by replacing with
     placeholder chars instead of blowing up
   * Fix `--lineart` option failing with unicode errors
